--- a/TODO
+++ b/TODO
@@ -23,10 +23,6 @@
      Fix incorrect design of 'query-info' signal.
      Implement XDS support => done, but in a quite dirty way.
 
-* Better file size calculations
-     prevent divided by zero problem. (calculate percentage when total size = 0)
-     Some remote or virtual files doesn't have block size and block count.
-
 * Thumbnails, may be cached with hash table to speed up loading.
      Need to support external thumbnailers.
      Thunar can directly load embedded thumbnail in jpeg files, we need that, too.
@@ -40,6 +36,7 @@
      Not available yet in computer:///
 
 * path resolution and canonicalization: convert ../ and ./ gracefully
+     Partially done. fm_path_new_relative and fm_path_new_child handles . and ..
 
 * Add "Create New" to popup menu of folder. => partially done, quite dirty.
 
