--- a/TODO
+++ b/TODO
@@ -72,6 +72,7 @@
 
 * Bug file properties dialog failed to show atime.
 
+* Implement our own empty trash API since delete a file in trash:/// with g_file_delete really sucks.
 
 
 [Medium Priority]
