--- a/po/it.po
+++ b/po/it.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: 0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-04-25 03:19+0800\n"
-"PO-Revision-Date: 2010-03-31 09:47+0100\n"
+"PO-Revision-Date: 2010-04-25 01:58+0100\n"
 "Last-Translator: Andrea Florio <andrea@opensuse.org>\n"
 "Language-Team: it <it@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -57,9 +57,7 @@ msgstr "Applicazioni installate"
 
 #: ../data/ui/app-chooser.glade.h:13
 msgid "Set selected application as default action of this file type"
-msgstr ""
-"Imposta l'applicazione selezionata come azione predefinita per questo tipo "
-"di file"
+msgstr "Imposta l'applicazione selezionata come azione predefinita per questo tipo di file"
 
 #: ../data/ui/app-chooser.glade.h:14
 msgid "_Browse"
@@ -185,9 +183,7 @@ msgstr "Operazioni ch il proprietario del file pò fare"
 
 #: ../data/ui/file-prop.glade.h:21
 msgid "Operations that users in the same group as the owner of the file can do"
-msgstr ""
-"Operazioni che possono fare gli utenti appartenenti allo stesso gruppo del "
-"il proprietario del file"
+msgstr "Operazioni che possono fare gli utenti appartenenti allo stesso gruppo del il proprietario del file"
 
 #: ../data/ui/file-prop.glade.h:22
 msgid "Read and Write"
@@ -269,19 +265,15 @@ msgid "System Applications"
 msgstr "Applicazioni di sistema"
 
 #: ../data/ui/preferred-apps.glade.h:8
-msgid ""
-"The preferred Mail Client will be used to compose emails when you click on E-"
-"mail addresses."
-msgstr ""
-"Il client Mail preferito sarà usato per comporre email quando cliccherai un "
-"indirizzo E-mail"
+msgid "The preferred Mail Client will be used to compose emails when you click on E-mail addresses."
+msgstr "Il client Mail preferito sarà usato per comporre email quando cliccherai un indirizzo E-mail"
 
 #: ../data/ui/preferred-apps.glade.h:9
 msgid "The preferred Web Browser will be used to open hyperlinks."
-msgstr ""
-"Il Browser Web preferito sarà usato per aprire collegamenti ipertestuali."
+msgstr "Il Browser Web preferito sarà usato per aprire collegamenti ipertestuali."
 
-#: ../src/base/fm-utils.c:54 ../src/base/fm-utils.c:83
+#: ../src/base/fm-utils.c:54
+#: ../src/base/fm-utils.c:83
 #, c-format
 msgid "%u byte"
 msgid_plural "%u bytes"
@@ -336,7 +328,8 @@ msgstr "Cestino"
 msgid "My Computer"
 msgstr "Il Mio Computer"
 
-#: ../src/base/fm-path.c:446 ../src/gtk/fm-places-view.c:567
+#: ../src/base/fm-path.c:446
+#: ../src/gtk/fm-places-view.c:567
 msgid "Applications"
 msgstr "Applicazioni"
 
@@ -348,20 +341,27 @@ msgstr "Rete"
 msgid ": "
 msgstr ":"
 
-#: ../src/gtk/fm-progress-dlg.c:208 ../src/gtk/fm-progress-dlg.c:227
+#: ../src/gtk/fm-progress-dlg.c:208
+#: ../src/gtk/fm-progress-dlg.c:227
 #, c-format
 msgid ""
 "Type: %s\n"
 "Size: %s\n"
 "Modified: %s"
 msgstr ""
+"Tipo: %s\n"
+"Dimensione: %s\n"
+"Modificato: %s"
 
-#: ../src/gtk/fm-progress-dlg.c:215 ../src/gtk/fm-progress-dlg.c:234
+#: ../src/gtk/fm-progress-dlg.c:215
+#: ../src/gtk/fm-progress-dlg.c:234
 #, c-format
 msgid ""
 "Type: %s\n"
 "Modified: %s"
 msgstr ""
+"Tipo: %s\n"
+"Modificato: %s"
 
 #: ../src/gtk/fm-progress-dlg.c:302
 msgid "The file operation is cancelled and there are some errors."
@@ -381,10 +381,11 @@ msgstr "Finito"
 
 #: ../src/gtk/fm-progress-dlg.c:328
 msgid ""
-"Some files cannot be moved to trash can because the underlying file systems "
-"don't support this operation.\n"
+"Some files cannot be moved to trash can because the underlying file systems don't support this operation.\n"
 "Do you want to delete them instead?"
 msgstr ""
+"Alcuni file non possono essere spostati nel cestino perchè il file system in uso non supporta questa operazione. \n"
+"Vuoi invece cancellarli?"
 
 #: ../src/gtk/fm-progress-dlg.c:422
 msgid ", "
@@ -423,8 +424,7 @@ msgid "Please enter a valid group name or numeric id."
 msgstr "Per favore digita un nome gruppo o id numerico valido."
 
 #: ../src/gtk/fm-file-properties.c:351
-msgid ""
-"Do you want to recursively apply these changes to all files and sub-folders?"
+msgid "Do you want to recursively apply these changes to all files and sub-folders?"
 msgstr "Vuoi applicare questi cambiamenti a tutti i file e le sotto-cartelle?"
 
 #: ../src/gtk/fm-file-properties.c:625
@@ -447,7 +447,8 @@ msgstr "Smona Volume"
 msgid "Eject Removable Media"
 msgstr "Espelli dispositivo removibile"
 
-#: ../src/gtk/fm-places-view.c:147 ../src/gtk/fm-places-view.c:874
+#: ../src/gtk/fm-places-view.c:147
+#: ../src/gtk/fm-places-view.c:874
 msgid "Rename Bookmark Item"
 msgstr "Rinomina il segnalibro"
 
@@ -471,7 +472,8 @@ msgstr "Scrivania"
 msgid "Enter a new name:"
 msgstr "Inserisci un nuovo nome:"
 
-#: ../src/gtk/fm-file-menu.c:84 ../src/gtk/fm-file-menu.c:85
+#: ../src/gtk/fm-file-menu.c:84
+#: ../src/gtk/fm-file-menu.c:85
 msgid "Open With..."
 msgstr "Apri con..."
 
@@ -501,11 +503,11 @@ msgstr "Estrai in..."
 
 #: ../src/gtk/fm-file-menu.c:244
 msgid "_Restore"
-msgstr ""
+msgstr "_Ripristina"
 
 #: ../src/gtk/fm-file-menu.c:245
 msgid "Restore trashed files to original paths"
-msgstr ""
+msgstr "Ripristina i file del cestino ai loro percorsi originali"
 
 #: ../src/gtk/fm-dnd-dest.c:449
 msgid "XDirectSave failed."
@@ -575,7 +577,8 @@ msgstr "Per favore inserisci un nuovo nome:"
 msgid "Are you sure you want to empty the trash can?"
 msgstr "Sei sicuro di voler svuotare il cestino?"
 
-#: ../src/job/fm-dir-list-job.c:229 ../src/job/fm-dir-list-job.c:238
+#: ../src/job/fm-dir-list-job.c:229
+#: ../src/job/fm-dir-list-job.c:238
 #: ../src/job/fm-dir-list-job.c:325
 #, c-format
 msgid "The specified directory is not valid"
@@ -583,6 +586,6 @@ msgstr "La cartella specificata non è valida"
 
 #~ msgid "It's not a valid directory"
 #~ msgstr "Non è una cartella valida"
-
 #~ msgid "The selection mode"
 #~ msgstr "Per favore, seleziona una cartella"
+
