--- a/po/el.po
+++ b/po/el.po
@@ -4,13 +4,13 @@ msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-04-25 03:19+0800\n"
-"PO-Revision-Date: 2010-04-08 21:27+0200\n"
+"PO-Revision-Date: 2010-04-25 02:24+0200\n"
 "Last-Translator:  <edhunter@sidux.com>\n"
 "Language-Team: Greek\n"
+"Language: el\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: el\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.1\n"
 
@@ -357,6 +357,9 @@ msgid ""
 "Size: %s\n"
 "Modified: %s"
 msgstr ""
+"Τύπος: %s\n"
+"Μέγεθος: %s\n"
+"Τροποποιήθηκε: %s"
 
 #: ../src/gtk/fm-progress-dlg.c:215 ../src/gtk/fm-progress-dlg.c:234
 #, c-format
@@ -364,6 +367,8 @@ msgid ""
 "Type: %s\n"
 "Modified: %s"
 msgstr ""
+"Τύπος: %s\n"
+"Τροποποιήθηκε: %s"
 
 #: ../src/gtk/fm-progress-dlg.c:302
 msgid "The file operation is cancelled and there are some errors."
@@ -504,7 +509,7 @@ msgstr "Αποσυμπίεση στο..."
 
 #: ../src/gtk/fm-file-menu.c:244
 msgid "_Restore"
-msgstr ""
+msgstr "_Επαναφορά"
 
 #: ../src/gtk/fm-file-menu.c:245
 msgid "Restore trashed files to original paths"
