--- a/po/sv.po
+++ b/po/sv.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-04-25 03:19+0800\n"
-"PO-Revision-Date: 2010-04-02 15:52+0200\n"
-"Last-Translator: Martin Bagge <brother@bsnet.se>\n"
+"PO-Revision-Date: 2010-04-26 12:51+0200\n"
+"Last-Translator: Martin <brother@bsnet.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
+"Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sv\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.1\n"
 
@@ -353,6 +353,9 @@ msgid ""
 "Size: %s\n"
 "Modified: %s"
 msgstr ""
+"Typ: %s\n"
+"Size: %s\n"
+"Ändrad: %s"
 
 #: ../src/gtk/fm-progress-dlg.c:215 ../src/gtk/fm-progress-dlg.c:234
 #, c-format
@@ -360,6 +363,8 @@ msgid ""
 "Type: %s\n"
 "Modified: %s"
 msgstr ""
+"Typ: %s\n"
+"Ändrad: %s"
 
 #: ../src/gtk/fm-progress-dlg.c:302
 msgid "The file operation is cancelled and there are some errors."
@@ -383,6 +388,9 @@ msgid ""
 "don't support this operation.\n"
 "Do you want to delete them instead?"
 msgstr ""
+"Några filer kan inte flyttas till papperskorgen på grund av att filsystemet "
+"som används inte har stöd för operationen.\n"
+"Vill du radera dessa filer istället?"
 
 #: ../src/gtk/fm-progress-dlg.c:422
 msgid ", "
@@ -500,11 +508,11 @@ msgstr "Extrahera till..."
 
 #: ../src/gtk/fm-file-menu.c:244
 msgid "_Restore"
-msgstr ""
+msgstr "_Återställ"
 
 #: ../src/gtk/fm-file-menu.c:245
 msgid "Restore trashed files to original paths"
-msgstr ""
+msgstr "Återställer filer från papperskorgen till sin ursprungliga plats"
 
 #: ../src/gtk/fm-dnd-dest.c:449
 msgid "XDirectSave failed."
