--- a/po/pl.po
+++ b/po/pl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-04-28 02:27+0800\n"
-"PO-Revision-Date: 2010-04-06 18:40+0200\n"
+"PO-Revision-Date: 2010-04-29 02:35+0200\n"
 "Last-Translator: Artur <mazdac@gmail.com>\n"
 "Language-Team: \n"
+"Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pl\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.0.1\n"
@@ -358,6 +358,9 @@ msgid ""
 "Size: %s\n"
 "Modified: %s"
 msgstr ""
+"Typ: %s\n"
+"Rozmiar: %s\n"
+"Zmodyfikowano: %s"
 
 #: ../src/gtk/fm-progress-dlg.c:215 ../src/gtk/fm-progress-dlg.c:234
 #, c-format
@@ -365,6 +368,8 @@ msgid ""
 "Type: %s\n"
 "Modified: %s"
 msgstr ""
+"Typ: %s\n"
+"Zmodyfikowano: %s"
 
 #: ../src/gtk/fm-progress-dlg.c:302
 msgid "The file operation is cancelled and there are some errors."
@@ -388,6 +393,9 @@ msgid ""
 "don't support this operation.\n"
 "Do you want to delete them instead?"
 msgstr ""
+"Pewne pliki nie mogą zostać przeniesione do kosza ponieważ system plików na "
+"którym się znajdują nie obsługuje tej operacji.\n"
+"Czy zamiast tego usunąć je trwale?"
 
 #: ../src/gtk/fm-progress-dlg.c:422
 msgid ", "
@@ -419,7 +427,7 @@ msgstr "Zmienianie atrybutów pliku"
 
 #: ../src/gtk/fm-file-properties.c:171
 msgid "Please enter a valid user name or numeric id."
-msgstr "Prosze wrowadzić prawidłową nazwę użytkownika lub id."
+msgstr "Proszę wprowadzić prawidłową nazwę użytkownika lub id."
 
 #: ../src/gtk/fm-file-properties.c:203
 msgid "Please enter a valid group name or numeric id."
@@ -506,11 +514,11 @@ msgstr "Rozpakuj do..."
 
 #: ../src/gtk/fm-file-menu.c:244
 msgid "_Restore"
-msgstr ""
+msgstr "_Przywróć"
 
 #: ../src/gtk/fm-file-menu.c:245
 msgid "Restore trashed files to original paths"
-msgstr ""
+msgstr "Przywróć pliki przeniesione do kosza do ich pierwotnego położenia"
 
 #: ../src/gtk/fm-dnd-dest.c:449
 msgid "XDirectSave failed."
@@ -558,7 +566,7 @@ msgstr "Proszę wybrać katalog"
 
 #: ../src/gtk/fm-gtk-utils.c:400
 msgid "Only system administrators have the permission to do this."
-msgstr "Tylko administrators systemu posiada uprawnienia aby to wykonać."
+msgstr "Tylko administratorzy systemu posiadają uprawnienia aby to wykonać."
 
 #: ../src/gtk/fm-gtk-utils.c:475
 msgid "Do you want to move the selected files to trash can?"
@@ -578,7 +586,7 @@ msgstr "Wprowadź nową nazwę:"
 
 #: ../src/gtk/fm-gtk-utils.c:564
 msgid "Are you sure you want to empty the trash can?"
-msgstr "Czy napewno opróżnić kosz?"
+msgstr "Czy na pewno opróżnić kosz?"
 
 #: ../src/job/fm-dir-list-job.c:229 ../src/job/fm-dir-list-job.c:238
 #: ../src/job/fm-dir-list-job.c:325
