--- a/po/hr.po
+++ b/po/hr.po
@@ -8,15 +8,16 @@ msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-24 11:11+0200\n"
-"PO-Revision-Date: 2010-06-03 02:17+0200\n"
-"Last-Translator: Ivica Kolić<ikoli@yahoo.com> <>\n"
+"PO-Revision-Date: 2011-01-05 13:04+0200\n"
+"Last-Translator: zvacet <ikoli@yahoo.com>\n"
 "Language-Team: Croatian (hr) <>\n"
-"Language: \n"
+"Language: hr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: ../data/ui/app-chooser.glade.h:1
 msgid "<b>Command line to execute:</b>"
@@ -36,10 +37,10 @@ msgid ""
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
 "<b>Ovi posebni kodovi mogu biti korišteni u naredbenom retku:</b>\n"
-" <b>%f</b>:predstavljaju jedno ime datoteke\n"
-" <b>%F</b>: predstavljaju višestruka imena datoteka\n"
-" <b>%u</b>: predstavljaju jedan URI datoteke\n"
-" <b>%U</b>: predstavljaju višestruke URI-je"
+"<b>%f</b>:predstavljaju jedno ime datoteke\n"
+"<b>%F</b>: predstavljaju višestruka imena datoteka\n"
+"<b>%u</b>: predstavljaju jedan URI datoteke\n"
+"<b>%U</b>: predstavljaju višestruke URI-je"
 
 #: ../data/ui/app-chooser.glade.h:9
 msgid "Choose An Application"
@@ -73,7 +74,7 @@ msgid ""
 msgstr ""
 "<b>Datoteka sa istim imenom već se nalazi na ovoj lokaciji.</b>\n"
 "\n"
-"Želite li zamijeniti postojeću datoteku?"
+"Želite li zamijeniti postojeću datoteku"
 
 #: ../data/ui/ask-rename.glade.h:4
 msgid "Apply this option to all existing files"
@@ -197,7 +198,7 @@ msgstr "Samo čitaj"
 
 #: ../data/ui/file-prop.glade.h:24
 msgid "Select the application used to open files of this type "
-msgstr "Izaberi program koji je otvarao datoteke ovog tipa"
+msgstr "Izaberi program koji je otvarao datoteke ovog tipa "
 
 #: ../data/ui/file-prop.glade.h:25
 msgid "Write only"
@@ -252,7 +253,7 @@ msgstr "<b>Web preglednik</b>"
 
 #: ../data/ui/preferred-apps.glade.h:4
 msgid "Command line:"
-msgstr "Naredbeni redak"
+msgstr "Naredbeni redak:"
 
 #: ../data/ui/preferred-apps.glade.h:5
 msgid "File Associations"
@@ -274,16 +275,15 @@ msgstr ""
 
 #: ../data/ui/preferred-apps.glade.h:9
 msgid "The preferred Web Browser will be used to open hyperlinks."
-msgstr " "
+msgstr ""
 
 #: ../data/ui/exec-file.glade.h:1
-#, fuzzy
 msgid "Execute File"
-msgstr "Višestruke datoteke"
+msgstr "Izvrši datoteku"
 
 #: ../data/ui/exec-file.glade.h:2
 msgid "Execute in _Terminal"
-msgstr ""
+msgstr "Izvrši u _terminalu"
 
 #: ../src/base/fm-utils.c:54 ../src/base/fm-utils.c:83
 #, c-format
@@ -291,6 +291,7 @@ msgid "%u byte"
 msgid_plural "%u bytes"
 msgstr[0] ""
 msgstr[1] ""
+msgstr[2] ""
 
 #: ../src/base/fm-utils.c:61
 msgid "KB"
@@ -435,11 +436,11 @@ msgstr[2] ""
 
 #: ../src/gtk/fm-file-properties.c:176
 msgid "Please enter a valid user name or numeric id."
-msgstr "Unesite valjano korisničko ime ili brojčani id"
+msgstr "Unesite valjano korisničko ime ili brojčani id."
 
 #: ../src/gtk/fm-file-properties.c:208
 msgid "Please enter a valid group name or numeric id."
-msgstr "Unesite valjano ime grupe ili brojčani id"
+msgstr "Unesite valjano ime grupe ili brojčani id."
 
 #: ../src/gtk/fm-file-properties.c:356
 msgid ""
@@ -485,7 +486,7 @@ msgstr "Unesi novo ime:"
 
 #: ../src/gtk/fm-file-menu.c:86 ../src/gtk/fm-file-menu.c:87
 msgid "Open With..."
-msgstr "Otvori pomoću"
+msgstr "Otvori pomoću..."
 
 #: ../src/gtk/fm-file-menu.c:92
 msgid "Rename"
@@ -493,7 +494,7 @@ msgstr "Preimenuj"
 
 #: ../src/gtk/fm-file-menu.c:93
 msgid "Create Symlink"
-msgstr ""
+msgstr "Napravi simboličku poveznicu"
 
 #: ../src/gtk/fm-file-menu.c:94
 msgid "Send To"
@@ -565,15 +566,15 @@ msgstr "Odaberite mapu"
 
 #: ../src/gtk/fm-gtk-utils.c:425
 msgid "Only system administrators have the permission to do this."
-msgstr "Samo administrator sustava ima dozvole ovo učiniti"
+msgstr "Samo administrator sustava ima dozvole ovo učiniti."
 
 #: ../src/gtk/fm-gtk-utils.c:504
 msgid "Do you want to move the selected files to trash can?"
-msgstr "Želite li maknuti odabrane datoteke u smeće"
+msgstr "Želite li maknuti odabrane datoteke u smeće?"
 
 #: ../src/gtk/fm-gtk-utils.c:525
 msgid "Do you want to delete the selected files?"
-msgstr "Želite li izbrisati odabrane datoteke"
+msgstr "Želite li izbrisati odabrane datoteke?"
 
 #: ../src/gtk/fm-gtk-utils.c:571
 msgid "Rename File"
@@ -593,11 +594,13 @@ msgid ""
 "This text file '%s' seems to be an executable script.\n"
 "What do you want to do with it?"
 msgstr ""
+"Ova tekstualna datoteka '%s' je izvršna skripta.\n"
+"Što želite učiniti s njom?"
 
 #: ../src/gtk/fm-gtk-file-launcher.c:93
 #, c-format
 msgid "This file '%s' is executable. Do you want to execute it?"
-msgstr ""
+msgstr "Ova datoteka '%s' je izvršna.Želite li je izvršiti?"
 
 #: ../src/job/fm-dir-list-job.c:231 ../src/job/fm-dir-list-job.c:240
 #: ../src/job/fm-dir-list-job.c:337
@@ -607,19 +610,19 @@ msgstr "Određeni direktorij nije valjan"
 
 #: ../src/job/fm-file-ops-job-xfer.c:53
 msgid "Source and destination are the same."
-msgstr ""
+msgstr "Izvor i odredište su isti."
 
 #: ../src/job/fm-file-ops-job-xfer.c:60
 msgid "Cannot move a folder into its sub folder"
-msgstr ""
+msgstr "Ne mogu premjestiti mapu u njenu podmapu"
 
 #: ../src/job/fm-file-ops-job-xfer.c:62
 msgid "Cannot copy a folder into its sub folder"
-msgstr ""
+msgstr "Ne mogu kopirati mapu u njenu podmapu"
 
 #: ../src/job/fm-file-ops-job-xfer.c:64
 msgid "Destination is a sub folder of source"
-msgstr ""
+msgstr "Odredište je podmapa izvora"
 
 #: ../src/gtk/fm-places-model.c:426
 msgid "Trash"
@@ -648,144 +651,144 @@ msgstr ""
 
 #: ../src/udisks/g-udisks-device.c:43
 msgid "CD-RW Disc"
-msgstr ""
+msgstr "CD-RW disk"
 
 #: ../src/udisks/g-udisks-device.c:43
 msgid "Blank CD-RW Disc"
-msgstr ""
+msgstr "Prazni CD-RW disk"
 
 #: ../src/udisks/g-udisks-device.c:44 ../src/udisks/g-udisks-device.c:45
 msgid "DVD-ROM Disc"
-msgstr ""
+msgstr "DVD-ROM disk"
 
 #: ../src/udisks/g-udisks-device.c:44 ../src/udisks/g-udisks-device.c:45
 msgid "Blank DVD-ROM Disc"
-msgstr ""
+msgstr "Prazni DVD-ROM disk"
 
 #: ../src/udisks/g-udisks-device.c:46
 msgid "DVD-RW Disc"
-msgstr ""
+msgstr "DVD-RW disk"
 
 #: ../src/udisks/g-udisks-device.c:46
 msgid "Blank DVD-RW Disc"
-msgstr ""
+msgstr "Prazni DVD-RW disk"
 
 #: ../src/udisks/g-udisks-device.c:47
 msgid "DVD-RAM Disc"
-msgstr ""
+msgstr "DVD-RAM disk"
 
 #: ../src/udisks/g-udisks-device.c:47
 msgid "Blank DVD-RAM Disc"
-msgstr ""
+msgstr "Prazni DVD-RAM disk"
 
 #: ../src/udisks/g-udisks-device.c:48
 msgid "DVD+R Disc"
-msgstr ""
+msgstr "DVD+R disk"
 
 #: ../src/udisks/g-udisks-device.c:48
 msgid "Blank DVD+R Disc"
-msgstr ""
+msgstr "Prazni DVD+R disk"
 
 #: ../src/udisks/g-udisks-device.c:49
 msgid "DVD+RW Disc"
-msgstr ""
+msgstr "DVD+RW disk"
 
 #: ../src/udisks/g-udisks-device.c:49
 msgid "Blank DVD+RW Disc"
-msgstr ""
+msgstr "Prazni DVD+RW disk"
 
 #: ../src/udisks/g-udisks-device.c:50
 msgid "DVD+R DL Disc"
-msgstr ""
+msgstr "DVD+R DL disk"
 
 #: ../src/udisks/g-udisks-device.c:50
 msgid "Blank DVD+R DL Disc"
-msgstr ""
+msgstr "Prazni DVD+R DL disk"
 
 #: ../src/udisks/g-udisks-device.c:51
 msgid "DVD+RW DL Disc"
-msgstr ""
+msgstr "DVD+RW DL disk"
 
 #: ../src/udisks/g-udisks-device.c:51
 msgid "Blank DVD+RW DL Disc"
-msgstr ""
+msgstr "Prazni DVD+RW DL disk"
 
 #: ../src/udisks/g-udisks-device.c:52
 msgid "Blu-Ray Disc"
-msgstr ""
+msgstr "Blu-Ray disk"
 
 #: ../src/udisks/g-udisks-device.c:52
 msgid "Blank Blu-Ray Disc"
-msgstr ""
+msgstr "Prazni Blu-Ray disk"
 
 #: ../src/udisks/g-udisks-device.c:53
 msgid "Blu-Ray R Disc"
-msgstr ""
+msgstr "Blu-Ray R disk"
 
 #: ../src/udisks/g-udisks-device.c:53
 msgid "Blank Blu-Ray R Disc"
-msgstr ""
+msgstr "Prazni Blu-Ray R disk"
 
 #: ../src/udisks/g-udisks-device.c:54
 msgid "Blu-Ray RW Disc"
-msgstr ""
+msgstr "Blu-Ray RW disk"
 
 #: ../src/udisks/g-udisks-device.c:54
 msgid "Blank Blu-Ray RW Disc"
-msgstr ""
+msgstr "Prazni Blu-Ray RW disk"
 
 #: ../src/udisks/g-udisks-device.c:55
 msgid "HD DVD Disc"
-msgstr ""
+msgstr "HD DVD disk"
 
 #: ../src/udisks/g-udisks-device.c:55
 msgid "Blank HD DVD Disc"
-msgstr ""
+msgstr "Prazni HD DVD disk"
 
 #: ../src/udisks/g-udisks-device.c:56
 msgid "HD DVD-R Disc"
-msgstr ""
+msgstr "HD DVD-R disk"
 
 #: ../src/udisks/g-udisks-device.c:56
 msgid "Blank HD DVD-R Disc"
-msgstr ""
+msgstr "Prazni HD DVD-R disk"
 
 #: ../src/udisks/g-udisks-device.c:57
 msgid "HD DVD-RW Disc"
-msgstr ""
+msgstr "HD DVD-RW disk"
 
 #: ../src/udisks/g-udisks-device.c:57
 msgid "Blank HD DVD-RW Disc"
-msgstr ""
+msgstr "Prazni HD DVD-RW disk"
 
 #: ../src/udisks/g-udisks-device.c:58
 msgid "MO Disc"
-msgstr ""
+msgstr "MO disk"
 
 #: ../src/udisks/g-udisks-device.c:58
 msgid "Blank MO Disc"
-msgstr ""
+msgstr "Prazni MO disk"
 
 #: ../src/udisks/g-udisks-device.c:59
 msgid "MRW Disc"
-msgstr ""
+msgstr "MRW disk"
 
 #: ../src/udisks/g-udisks-device.c:59
 msgid "Blank MRW Disc"
-msgstr ""
+msgstr "Prazni MRW disk"
 
 #: ../src/udisks/g-udisks-device.c:60
 msgid "MRW/W Disc"
-msgstr ""
+msgstr "MRW/W disk"
 
 #: ../src/udisks/g-udisks-device.c:60
 msgid "Blank MRW/W Disc"
-msgstr ""
+msgstr "Prazni MRW/W disk"
 
 #: ../src/udisks/g-udisks-device.c:299
 msgid "Blank Optical Disc"
-msgstr ""
+msgstr "Prazni optički disk"
 
 #: ../src/udisks/g-udisks-device.c:301
 msgid "Optical Disc"
-msgstr ""
+msgstr "Optički disk"
